# Django-Docker

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  SETUP.md  accounts.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: README.md
app/app/: settings.py  urls.py
app/core/: api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Header.js
frontend/src/pages/: CodeGenerator.js  Home.js  Results.js
frontend/src/services/: api.js
output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
src/aicop/: crew.py  main.py
src/aicop/config/: agents.yaml  tasks.yaml
