[project]
name = "aicop"
version = "0.1.0"
description = "AICOP using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "gradio>=5.39.0",
]

[project.scripts]
aicop = "aicop.main:run"
run_crew = "aicop.main:run"
train = "aicop.main:train"
replay = "aicop.main:replay"
test = "aicop.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
